Use relative URLs wherever possible

--- a/dev/index.html
+++ b/dev/index.html
@@ -4,7 +4,7 @@ permalink: /dev/index/
 ---
 {%- include_relative prototypes/courses/version-3/index.html -%}
 <!--
-<link rel="stylesheet" href="{{ site.url }}/css/static-main-content.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="/css/static-main-content.css?{{ site.time | date:'%s' }}">
 
 <style>
 
@@ -24,7 +24,7 @@ permalink: /dev/index/
 <main id="main">
   <div class="main-content-static">
     <h1>Hi there!</h1>
-    <p class="hero-text"><em>Oops</em>, you need to <a href="{{ site.gymurl }}/login?next=/dev">log in</a> to view this page.</p>
+    <p class="hero-text"><em>Oops</em>, you need to <a href="/login?next=/dev">log in</a> to view this page.</p>
   </div>
 </main>
  -->
