--- a/hub-pages/accessibility/index.html
+++ b/hub-pages/accessibility/index.html
@@ -29,12 +29,12 @@ css: [/css/hub-pages.css]
                           </h2>
                         </header>
                         <figure class="course-artwork">
-                          <img alt="Designing Accessible and Responsive Websites with Ethan Marcotte." srcset="{{ site.url }}/img/course-artwork/svg/gym-016.svg" src="{{ site.url }}/img/course-artwork/png/gym-016.png" width="574" height="488" decoding="async">
+                          <img alt="Designing Accessible and Responsive Websites with Ethan Marcotte." srcset="/img/course-artwork/svg/gym-016.svg" src="/img/course-artwork/png/gym-016.png" width="574" height="488" decoding="async">
                         </figure>
                         <h3 class="all-caps">Designing Accessible and Responsive Websites</h3>
                       </div>
                       <div class="card-cta card-cta-button">
-                        <a class="gym-button" href="https://thegymnasium.com/courses/course-v1:GYM+016+0/about"><b>Enroll for Free</b></a>
+                        <a class="gym-button" href="/courses/course-v1:GYM+016+0/about"><b>Enroll for Free</b></a>
                       </div>
                     </div>
                     <footer class="card-cta">
@@ -52,7 +52,7 @@ css: [/css/hub-pages.css]
                           </h2>
                         </header>
                         <figure class="full-width">
-                          <img alt="How to improve your website through accessibility testing (part 1)." src="{{ site.url }}/img/hub-pages/accessibility/featured/acessibility-testing-pt1-poster.jpg" width="1280" height="720" decoding="async">
+                          <img alt="How to improve your website through accessibility testing (part 1)." src="/img/hub-pages/accessibility/featured/acessibility-testing-pt1-poster.jpg" width="1280" height="720" decoding="async">
                         </figure>
                         <h3 class="all-caps">Web Accessibility Testing Made Easy</h3>
                       </div>
@@ -109,7 +109,7 @@ css: [/css/hub-pages.css]
               <div class="list-hr">
                 <ul>
                 <li>
-                  <h3><a href="https://thegymnasium.com/courses/course-v1:GYM+016+0/about">Designing Accessible and Responsive Websites</a></h3>
+                  <h3><a href="/courses/course-v1:GYM+016+0/about">Designing Accessible and Responsive Websites</a></h3>
                   <p>Learn accessible and responsive web design best practices for free with Ethan Marcotte.</p>
                 </li>
                 <li>
@@ -152,24 +152,24 @@ css: [/css/hub-pages.css]
                 </header>
                 <ul>
                   <li>
-                    <h3><a href="https://thegymnasium.com/courses/take5/introduction-to-screen-readers-using-voiceover">Introduction to Screen Readers Using VoiceOver</a></h3>
+                    <h3><a href="/courses/take5/introduction-to-screen-readers-using-voiceover">Introduction to Screen Readers Using VoiceOver</a></h3>
                   </li>
                   <li>
-                    <h3><a href="https://thegymnasium.com/courses/take5/creating-beautiful-and-accessible-drop-caps">Creating Beautiful and Accessible Drop Caps</a></h3>
+                    <h3><a href="/courses/take5/creating-beautiful-and-accessible-drop-caps">Creating Beautiful and Accessible Drop Caps</a></h3>
                   </li>
                   <li>
-                    <h3><a href="https://thegymnasium.com/courses/take5/understanding-document-structure-accessibility">Understanding Document Structure Accessibility</a></h3>
+                    <h3><a href="/courses/take5/understanding-document-structure-accessibility">Understanding Document Structure Accessibility</a></h3>
                   </li>
                   <li>
-                    <h3><a href="https://thegymnasium.com/courses/take5/making-headings-and-lists-more-accessible">Making Headings and Lists More Accessible</a></h3>
+                    <h3><a href="/courses/take5/making-headings-and-lists-more-accessible">Making Headings and Lists More Accessible</a></h3>
                   </li>
                   <li>
-                    <h3><a href="https://thegymnasium.com/courses/take5/designing-accessible-data-tables">Designing Accessible Data Tables</a></h3>
+                    <h3><a href="/courses/take5/designing-accessible-data-tables">Designing Accessible Data Tables</a></h3>
                   </li>
                 </ul>
               </div>
               <div class="cta">
-                <a class="gym-button" href="https://thegymnasium.com/courses/take5"><b>View More Tutorials</b></a>
+                <a class="gym-button" href="/courses/take5"><b>View More Tutorials</b></a>
               </div>
             </div>
             <div class="to-top-link">
@@ -318,7 +318,7 @@ css: [/css/hub-pages.css]
                     <p>If you’re looking to outsource accessibility projects, Aquent Studios can assemble and lead a team of accessibility experts and specialists in design, development, experience, and content to achieve your goals.</p>
                   </li>
                   <li>
-                    <h3><a href="https://thegymnasium.com/courses">Professional Development</a></h3>
+                    <h3><a href="/courses">Professional Development</a></h3>
                     <p>Upskill your team on the latest A11Y best practices for design and development from quick online courses to full-day workshops.</p>
                   </li>
                 </ul>
@@ -337,5 +337,5 @@ css: [/css/hub-pages.css]
 </main>
 
 <!-- polyfills -->
-<script async nomodule src="{{ site.url }}/js/polyfills/prefixfree.min.js"></script>
-<script async nomodule src="{{ site.url }}/js/polyfills/grid-equal-height.js"></script>
+<script async nomodule src="/js/polyfills/prefixfree.min.js"></script>
+<script async nomodule src="/js/polyfills/grid-equal-height.js"></script>
