--- a/hub-pages/career-skills/index.html
+++ b/hub-pages/career-skills/index.html
@@ -27,12 +27,12 @@ css: [/css/hub-pages.css]
                          <h2 class="all-caps"><span class="visuallyhidden">Career Skill</span> Courses</h2>
                         </header>
                         <figure class="course-artwork">
-                          <img alt="Defeating Busy" srcset="{{ site.url }}/img/course-artwork/svg/gym-001.svg" src="{{ site.url }}/img/course-artwork/png/gym-001.png" width="574" height="488" decoding="async">
+                          <img alt="Defeating Busy" srcset="/img/course-artwork/svg/gym-001.svg" src="/img/course-artwork/png/gym-001.png" width="574" height="488" decoding="async">
                         </figure>
                       <h3 class="all-caps">Defeating Busy</h3>
                       </div>
                       <div class="card-cta card-cta-button">
-                        <a class="gym-button" href="https://thegymnasium.com/courses/GYM/001/0/about"><b>Get Started</b></a>
+                        <a class="gym-button" href="/courses/GYM/001/0/about"><b>Get Started</b></a>
                       </div>
                     </div>
                     <footer class="card-cta">
@@ -48,12 +48,12 @@ css: [/css/hub-pages.css]
                           <h2 class="all-caps"><span class="visuallyhidden">Career Skill</span> Tutorials</h2>
                         </header>
                         <figure class="full-width">
-                          <img alt="Storytelling for Designers" src="{{ site.url }}/img/take5/posters/gym-5016.jpg" width="1280" height="720" decoding="async">
+                          <img alt="Storytelling for Designers" src="/img/take5/posters/gym-5016.jpg" width="1280" height="720" decoding="async">
                         </figure>
                         <h3 class="all-caps">Storytelling for Designers</h3>
                       </div>
                       <div class="card-cta card-cta-button">
-                        <a class="gym-button" href="https://thegymnasium.com/courses/take5/storytelling-for-designers"><b>Watch Now</b></a>
+                        <a class="gym-button" href="/courses/take5/storytelling-for-designers"><b>Watch Now</b></a>
                       </div>
                     </div>
                     <footer class="card-cta">
@@ -69,7 +69,7 @@ css: [/css/hub-pages.css]
                           <h2 class="all-caps"><span class="visuallyhidden">Career Skill</span> Articles</h2>
                         </header>
                         <figure class="full-width">
-                          <img alt="How to Conduct an Interview Like a Boss" src="{{ site.url }}/img/hub-pages/articles/featured/conduct-interview-like-a-boss.png" width="1280" height="720" decoding="async">
+                          <img alt="How to Conduct an Interview Like a Boss" src="/img/hub-pages/articles/featured/conduct-interview-like-a-boss.png" width="1280" height="720" decoding="async">
                         </figure>
                         <h3 class="all-caps">How to Conduct an Interview Like a Boss</h3>
                       </div>
@@ -103,38 +103,38 @@ css: [/css/hub-pages.css]
                 "@type": "Course",
                 "name": "Defeating Busy",
                 "description": "Learn how to estimate, plan, track, and manage your time in order to complete projects. Being busy isn’t a bad thing, but not being in control of your own time is.",
-                "image": "{{ site.url }}/img/social/courses/gym-001-social.png",
-                "url": "https://thegymnasium.com/courses/GYM/001/0/about",
+                "image": "{{ site.gymurl }}/img/social/courses/gym-001-social.png",
+                "url": "{{ site.gymurl }}/courses/GYM/001/0/about",
                 "position": 1,
                 "provider": {
                   "@type": "School",
                   "name": "Gymnasium",
-                  "sameAs": "https://thegymnasium.com"
+                  "sameAs": "{{ site.gymurl }}"
                 }
               },
               {
                 "@type": "Course",
                 "name": "Information Design and Visualization Fundamentals",
                 "description": "Learn the design and visual principles needed to create effective information graphics and data visualizations.",
-                "image": "{{ site.url }}/img/social/courses/gym-106-social.png",
-                "url": "https://thegymnasium.com/courses/GYM/106/0/about",
+                "image": "{{ site.gymurl }}/img/social/courses/gym-106-social.png",
+                "url": "{{ site.gymurl }}/courses/GYM/106/0/about",
                 "position": 2,
                 "provider": {
                   "@type": "School",
                   "name": "Gymnasium",
-                  "sameAs": "https://thegymnasium.com"
+                  "sameAs": "{{ site.gymurl }}"
                 },
                 {
                   "@type": "Course",
                   "name": "Introduction to Git and GitHub",
                   "description": "Learn the basics of version control and get a high-level overview of both Git and GitHub. Perfect for someone with little to no first-hand experience with either.",
-                  "image": "{{ site.url }}/img/social/courses/gym-006-social.png",
-                  "url": "https://thegymnasium.com/courses/GYM/006/0/about",
+                  "image": "{{ site.gymurl }}/img/social/courses/gym-006-social.png",
+                  "url": "{{ site.gymurl }}/courses/GYM/006/0/about",
                   "position": 3,
                   "provider": {
                     "@type": "School",
                     "name": "Gymnasium",
-                    "sameAs": "https://thegymnasium.com"
+                    "sameAs": "{{ site.gymurl }}"
                   }
                 }
               }
@@ -149,32 +149,32 @@ css: [/css/hub-pages.css]
           <ul>
             <li>
               <figure class="course-artwork bg-career-skills">
-                <a class="img-link" href="https://thegymnasium.com/courses/GYM/001/0/about" title="Get Started">
-                  <img alt="Defeating Busy" srcset="{{ site.url }}/img/course-artwork/svg/gym-001.svg" src="{{ site.url }}/img/course-artwork/png/gym-001.png" width="574" height="488">
+                <a class="img-link" href="/courses/GYM/001/0/about" title="Get Started">
+                  <img alt="Defeating Busy" srcset="/img/course-artwork/svg/gym-001.svg" src="/img/course-artwork/png/gym-001.png" width="574" height="488">
                 </a>
               </figure>
-              <h3><a href="https://thegymnasium.com/courses/GYM/001/0/about">Defeating Busy</a></h3>
+              <h3><a href="/courses/GYM/001/0/about">Defeating Busy</a></h3>
             </li>
             <li>
               <figure class="course-artwork bg-career-skills">
-                <a class="img-link" href="https://thegymnasium.com/courses/GYM/106/0/about" title="Get Started">
-                  <img alt="Information Design and Visualization Fundamentals" srcset="{{ site.url }}/img/course-artwork/svg/gym-106.svg" src="{{ site.url }}/img/course-artwork/png/gym-106.png" width="574" height="488">
+                <a class="img-link" href="/courses/GYM/106/0/about" title="Get Started">
+                  <img alt="Information Design and Visualization Fundamentals" srcset="/img/course-artwork/svg/gym-106.svg" src="/img/course-artwork/png/gym-106.png" width="574" height="488">
                 </a>
               </figure>
-              <h3><a href="https://thegymnasium.com/courses/GYM/106/0/about">Information Design and Visualization Fundamentals</a></h3>
+              <h3><a href="/courses/GYM/106/0/about">Information Design and Visualization Fundamentals</a></h3>
             </li>
             <li>
               <figure class="course-artwork bg-career-skills">
-                <a class="img-link" href="https://thegymnasium.com/courses/GYM/006/0/about" title="Get Started">
-                  <img alt="Introduction to Git and GitHub" srcset="{{ site.url }}/img/course-artwork/svg/gym-006.svg" src="{{ site.url }}/img/course-artwork/png/gym-006.png" width="574" height="488">
+                <a class="img-link" href="/courses/GYM/006/0/about" title="Get Started">
+                  <img alt="Introduction to Git and GitHub" srcset="/img/course-artwork/svg/gym-006.svg" src="/img/course-artwork/png/gym-006.png" width="574" height="488">
                 </a>
               </figure>
-              <h3><a href="https://thegymnasium.com/courses/GYM/006/0/about">Introduction to Git and GitHub</a></h3>
+              <h3><a href="/courses/GYM/006/0/about">Introduction to Git and GitHub</a></h3>
             </li>
           </ul>
         </div>
         <div class="cta">
-          <a class="gym-button" href="https://thegymnasium.com/courses"><b>View More Courses</b></a>
+          <a class="gym-button" href="/courses"><b>View More Courses</b></a>
         </div>
       </div>
       <div class="to-top-link">
@@ -193,67 +193,67 @@ css: [/css/hub-pages.css]
             <li>
               <section class="tutorial">
                 <figure>
-                  <a href="https://thegymnasium.com/courses/take5/storytelling-for-designers" title="Watch Now"><img alt="Storytelling for Designers" src="{{ site.url }}/img/take5/posters/gym-5016.jpg" width="1280" height="720"></a>
+                  <a href="/courses/take5/storytelling-for-designers" title="Watch Now"><img alt="Storytelling for Designers" src="/img/take5/posters/gym-5016.jpg" width="1280" height="720"></a>
                 </figure>
                 <header>
-                  <h3><a href="https://thegymnasium.com/courses/take5/storytelling-for-designers">Storytelling for Designers</a></h3>
+                  <h3><a href="/courses/take5/storytelling-for-designers">Storytelling for Designers</a></h3>
                 </header>
               </section>
             </li>
             <li>
               <section class="tutorial">
                 <figure>
-                  <a href="https://thegymnasium.com/courses/take5/how-to-tell-the-story-of-a-mid-career-pivot" title="Watch Now"><img alt="How to Tell the Story of a Mid-Career Pivot" src="{{ site.url }}/img/take5/posters/gym-5017.jpg" width="1280" height="720"></a>
+                  <a href="/courses/take5/how-to-tell-the-story-of-a-mid-career-pivot" title="Watch Now"><img alt="How to Tell the Story of a Mid-Career Pivot" src="/img/take5/posters/gym-5017.jpg" width="1280" height="720"></a>
                 </figure>
                 <header>
-                  <h3><a href="https://thegymnasium.com/courses/take5/how-to-tell-the-story-of-a-mid-career-pivot" title="Watch Now">How to Tell the Story of a Mid-Career Pivot</a></h3>
+                  <h3><a href="/courses/take5/how-to-tell-the-story-of-a-mid-career-pivot" title="Watch Now">How to Tell the Story of a Mid-Career Pivot</a></h3>
                 </header>
               </section>
             </li>
             <li>
               <section class="tutorial">
                 <figure>
-                  <a href="https://thegymnasium.com/courses/take5/crafting-your-story" title="Watch Now"><img alt="Crafting Your Story" src="{{ site.url }}/img/take5/posters/gym-5018.jpg" width="1280" height="720"></a>
+                  <a href="/courses/take5/crafting-your-story" title="Watch Now"><img alt="Crafting Your Story" src="/img/take5/posters/gym-5018.jpg" width="1280" height="720"></a>
                 </figure>
                 <header>
-                  <h3><a href="https://thegymnasium.com/courses/take5/crafting-your-story">Crafting Your Story</a></h3>
+                  <h3><a href="/courses/take5/crafting-your-story">Crafting Your Story</a></h3>
                 </header>
               </section>
             </li>
             <li>
               <section class="tutorial">
                 <figure>
-                  <a href="https://thegymnasium.com/courses/take5/self-promotion-through-your-online-presence" title="Watch Now"><img alt="Self-Promotion Through Your Online Presence" src="{{ site.url }}/img/take5/posters/gym-5019.jpg" width="1280" height="720"></a>
+                  <a href="/courses/take5/self-promotion-through-your-online-presence" title="Watch Now"><img alt="Self-Promotion Through Your Online Presence" src="/img/take5/posters/gym-5019.jpg" width="1280" height="720"></a>
                 </figure>
                 <header>
-                  <h3><a href="https://thegymnasium.com/courses/take5/self-promotion-through-your-online-presence">Self-Promotion Through Your Online Presence</a></h3>
+                  <h3><a href="/courses/take5/self-promotion-through-your-online-presence">Self-Promotion Through Your Online Presence</a></h3>
                 </header>
               </section>
             </li>
             <li>
               <section class="tutorial">
                 <figure>
-                  <a href="https://thegymnasium.com/courses/take5/knowing-your-audience" title="Watch Now"><img alt="Knowing Your Audience" src="{{ site.url }}/img/take5/posters/gym-5020.jpg" width="1280" height="720"></a>
+                  <a href="/courses/take5/knowing-your-audience" title="Watch Now"><img alt="Knowing Your Audience" src="/img/take5/posters/gym-5020.jpg" width="1280" height="720"></a>
                 </figure>
                 <header>
-                  <h3><a href="https://thegymnasium.com/courses/take5/knowing-your-audience">Knowing Your Audience</a></h3>
+                  <h3><a href="/courses/take5/knowing-your-audience">Knowing Your Audience</a></h3>
                 </header>
               </section>
             </li>
             <li>
               <section class="tutorial">
                 <figure>
-                  <a href="https://thegymnasium.com/courses/take5/managing-your-time-like-a-pro" title="Watch Now"><img alt="Managing Your Time Like a Pro" src="{{ site.url }}/img/take5/posters/gym-5027.jpg" width="1280" height="720"></a>
+                  <a href="/courses/take5/managing-your-time-like-a-pro" title="Watch Now"><img alt="Managing Your Time Like a Pro" src="/img/take5/posters/gym-5027.jpg" width="1280" height="720"></a>
                 </figure>
                 <header>
-                  <h3><a href="https://thegymnasium.com/courses/take5/managing-your-time-like-a-pro">Managing Your Time Like a Pro</a></h3>
+                  <h3><a href="/courses/take5/managing-your-time-like-a-pro">Managing Your Time Like a Pro</a></h3>
                 </header>
               </section>
             </li>
           </ul>
         </div>
         <div class="cta">
-          <a class="gym-button" href="https://thegymnasium.com/courses/take5"><b>View More Tutorials</b></a>
+          <a class="gym-button" href="/courses/take5"><b>View More Tutorials</b></a>
         </div>
       </div>
       <div class="to-top-link">
@@ -317,5 +317,5 @@ css: [/css/hub-pages.css]
 </main>
 
 <!-- polyfills -->
-<script async nomodule src="{{ site.url }}/js/polyfills/prefixfree.min.js"></script>
-<script async nomodule src="{{ site.url }}/js/polyfills/grid-equal-height.js"></script>
+<script async nomodule src="/js/polyfills/prefixfree.min.js"></script>
+<script async nomodule src="/js/polyfills/grid-equal-height.js"></script>
