--- a/hub-pages/design-systems/index.html
+++ b/hub-pages/design-systems/index.html
@@ -51,13 +51,13 @@ css: [/css/hub-pages.css]
               </header>
               <div class="row">
                 <div class="col-md-3">
-                  <img class="artwork" alt="Design Systems for Designers" srcset="{{ site.url }}/img/course-artwork/svg/gym-018.svg" src="{{ site.url }}/img/course-artwork/png/gym-018.png" width="574" height="488" decoding="async">
+                  <img class="artwork" alt="Design Systems for Designers" srcset="/img/course-artwork/svg/gym-018.svg" src="/img/course-artwork/png/gym-018.png" width="574" height="488" decoding="async">
                 </div>
                 <div class="col-sm-8 col-md-5 cta-view">
                   <p>
                     Learn how to incorporate pattern libraries and design systems into your workflow.
                   </p>
-                  <a class="gym-button" href="https://thegymnasium.com/courses/course-v1:GYM+018+0/about"><b>View Course</b></a>
+                  <a class="gym-button" href="/courses/course-v1:GYM+018+0/about"><b>View Course</b></a>
                 </div>
               </div>
               <div class="row row-info">
@@ -99,13 +99,13 @@ css: [/css/hub-pages.css]
               </header>
               <div class="row">
                 <div class="col-md-3">
-                  <img class="artwork" alt="Design Systems for Developers" srcset="{{ site.url }}/img/course-artwork/svg/gym-019.svg" src="{{ site.url }}/img/course-artwork/png/gym-019.png" width="574" height="488" decoding="async">
+                  <img class="artwork" alt="Design Systems for Developers" srcset="/img/course-artwork/svg/gym-019.svg" src="/img/course-artwork/png/gym-019.png" width="574" height="488" decoding="async">
                 </div>
                 <div class="col-sm-8 col-md-5 cta-view">
                   <p>
                     Learn how to use your development skills to help build and support an effective and thriving design system.
                   </p>
-                  <a class="gym-button" href="https://thegymnasium.com/courses/course-v1:GYM+019+0/about"><b>View Course</b></a>
+                  <a class="gym-button" href="/courses/course-v1:GYM+019+0/about"><b>View Course</b></a>
                 </div>
               </div>
               <div class="row row-info">
@@ -147,13 +147,13 @@ css: [/css/hub-pages.css]
               </header>
               <div class="row">
                 <div class="col-md-3">
-                  <img class="artwork" alt="Design Systems for Product Managers" srcset="{{ site.url }}/img/course-artwork/svg/gym-020.svg" src="{{ site.url }}/img/course-artwork/png/gym-020.png" width="574" height="488" decoding="async">
+                  <img class="artwork" alt="Design Systems for Product Managers" srcset="/img/course-artwork/svg/gym-020.svg" src="/img/course-artwork/png/gym-020.png" width="574" height="488" decoding="async">
                 </div>
                 <div class="col-sm-8 col-md-5 cta-view">
                   <p>
                     Learn how pattern libraries and design systems can change and improve the work your teams do on a daily basis.
                   </p>
-                  <a class="gym-button" href="https://thegymnasium.com/courses/course-v1:GYM+020+0/about"><b>View Course</b></a>
+                  <a class="gym-button" href="/courses/course-v1:GYM+020+0/about"><b>View Course</b></a>
                 </div>
               </div>
               <div class="row row-info">
@@ -195,13 +195,13 @@ css: [/css/hub-pages.css]
               </header>
               <div class="row">
                 <div class="col-md-3">
-                  <img class="artwork" alt="Design Systems for Everyone" src="{{ site.url }}/img/course-artwork/png/gym-017.png" width="574" height="488" decoding="async">
+                  <img class="artwork" alt="Design Systems for Everyone" src="/img/course-artwork/png/gym-017.png" width="574" height="488" decoding="async">
                 </div>
                 <div class="col-sm-8 col-md-5 cta-view">
                   <p>
                     Learn how to effectively integrate pattern libraries and design systems into your organization’s workflow.
                   </p>
-                  <a class="gym-button" href="https://thegymnasium.com/courses/course-v1:GYM+017+0/about"><b>View Course</b></a>
+                  <a class="gym-button" href="/courses/course-v1:GYM+017+0/about"><b>View Course</b></a>
                 </div>
               </div>
               <div class="row row-info">
@@ -244,7 +244,7 @@ css: [/css/hub-pages.css]
                 </h3>
                 <div class="row">
                   <div class="col-md-3">
-                    <img class="headshot" alt="Ethan Marcotte is standing in front of a doorway, looking at a smartphone." src="{{ site.url }}/img/hub-pages/design-systems/instructor/ethan-marcotte.jpg" width="1280" height="1024" decoding="async">
+                    <img class="headshot" alt="Ethan Marcotte is standing in front of a doorway, looking at a smartphone." src="/img/hub-pages/design-systems/instructor/ethan-marcotte.jpg" width="1280" height="1024" decoding="async">
                   </div>
                   <div class="col-md-7">
                     <p>
