--- a/hub-pages/remote-work/index.html
+++ b/hub-pages/remote-work/index.html
@@ -27,7 +27,7 @@ css: [/css/hub-pages.css]
                           <h2 class="all-caps"><span class="visuallyhidden">Remote Work</span> Resources</h2>
                         </header>
                         <figure class="full-width">
-                          <img alt="2023 Salary Guide" src="{{ site.url }}/img/jobs/featured/salary-guide-2023.jpg" width="1280" height="720" decoding="async">
+                          <img alt="2023 Salary Guide" src="/img/jobs/featured/salary-guide-2023.jpg" width="1280" height="720" decoding="async">
                         </figure>
                         <h3 class="all-caps">Tips and Tools for Remote Work</h3>
                       </div>
@@ -45,7 +45,7 @@ css: [/css/hub-pages.css]
                           <h2 class="all-caps"><span class="visuallyhidden">Remote Work</span> Jobs</h2>
                         </header>
                         <figure class="full-width">
-                          <img alt="Find work with Aquent in over 35 offices around the globe." src="{{ site.url }}/img/jobs/featured/find-work.jpg" width="1280" height="720" decoding="async">
+                          <img alt="Find work with Aquent in over 35 offices around the globe." src="/img/jobs/featured/find-work.jpg" width="1280" height="720" decoding="async">
                         </figure>
                         <h3 class="all-caps">Remote Work That Best Fits Your Skills</h3>
                       </div>
@@ -63,12 +63,12 @@ css: [/css/hub-pages.css]
                          <h2 class="all-caps">Free Webinar</h2>
                         </header>
                         <figure class="full-width">
-                          <img alt="Begin your journey by watching our Remote Work webinar with industry experts Richard Banfield and Darren Buckner." src="{{ site.url }}/img/hub-pages/webinars/featured/remote-work-begin-your-journey-slide.jpg" width="1280" height="720" decoding="async">
+                          <img alt="Begin your journey by watching our Remote Work webinar with industry experts Richard Banfield and Darren Buckner." src="/img/hub-pages/webinars/featured/remote-work-begin-your-journey-slide.jpg" width="1280" height="720" decoding="async">
                         </figure>
                       <h3 class="all-caps">Remote Work: <span class="no-wrap">Can It Work for You?</span></h3>
                       </div>
                       <div class="card-cta card-cta-button">
-                        <a class="gym-button" href="https://thegymnasium.com/webinars/remote-work"><b>Watch Now</b></a>
+                        <a class="gym-button" href="/webinars/remote-work"><b>Watch Now</b></a>
                       </div>
                     </div>
                   </article>
@@ -92,7 +92,7 @@ css: [/css/hub-pages.css]
         <div class="list-hr">
           <ul>
             <li>
-              <h3><a href="https://thegymnasium.com/webinars/remote-work">Remote Work: Can It Work for You?</a></h3>
+              <h3><a href="/webinars/remote-work">Remote Work: Can It Work for You?</a></h3>
               <p>A free hour-long webinar about the benefits and challenges of remote work — from communication and collaboration to time zones and transparency. Hosted by Jeremy Osborn with industry experts Richard Banfield and Darren Buckner.</p>
             </li>
             <li>
@@ -104,15 +104,15 @@ css: [/css/hub-pages.css]
               <p>A collection of resources inspired by our webinar on the benefits and challenges of remote work.</p>
             </li>
             <li>
-              <h3><a href="https://thegymnasium.com/courses/GYM/001/0/about">Defeating Busy</a></h3>
+              <h3><a href="/courses/GYM/001/0/about">Defeating Busy</a></h3>
               <p>A free hour-long course on how to estimate, plan, track, and manage your time in order to complete projects.</p>
             </li>
             <li>
-              <h3><a href="https://thegymnasium.com/courses/take5/managing-your-time-like-a-pro">Managing Your Time Like a Pro</a></h3>
+              <h3><a href="/courses/take5/managing-your-time-like-a-pro">Managing Your Time Like a Pro</a></h3>
               <p>Learn 3 ways to manage your work day more efficiently in this five minute tutorial.</p>
             </li>
             <li>
-              <h3><a href="https://thegymnasium.com/jobs">Career Resources</a></h3>
+              <h3><a href="/jobs">Career Resources</a></h3>
               <p>Whether you’re a student creating a portfolio or a client building a team, we’ve got you covered.</p>
             </li>
             <li>
@@ -295,5 +295,5 @@ css: [/css/hub-pages.css]
 </main>
 
 <!-- polyfills -->
-<script async nomodule src="{{ site.url }}/js/polyfills/prefixfree.min.js"></script>
-<script async nomodule src="{{ site.url }}/js/polyfills/grid-equal-height.js"></script>
+<script async nomodule src="/js/polyfills/prefixfree.min.js"></script>
+<script async nomodule src="/js/polyfills/grid-equal-height.js"></script>
