--- a/jobs/index.html
+++ b/jobs/index.html
@@ -21,7 +21,7 @@ css: [/css/hub-pages.css]
                       <h2 class="all-caps">Salary Guides</h2>
                     </header>
                     <figure class="full-width">
-                      <img alt="2023 Salary Guide" src="{{ site.url }}/img/jobs/featured/salary-guide-2023.jpg" width="1280" height="720" decoding="async">
+                      <img alt="2023 Salary Guide" src="/img/jobs/featured/salary-guide-2023.jpg" width="1280" height="720" decoding="async">
                     </figure>
                     <h3 class="all-caps" hidden>See How Your Salary & Benefits Stack Up</h3>
                   </div>
@@ -39,7 +39,7 @@ css: [/css/hub-pages.css]
                       <h2 class="all-caps">Job Search</h2>
                     </header>
                     <figure class="full-width">
-                      <img alt="Find work with Aquent in over 35 offices around the globe." src="{{ site.url }}/img/jobs/featured/find-work.jpg" width="1280" height="720" decoding="async">
+                      <img alt="Find work with Aquent in over 35 offices around the globe." src="/img/jobs/featured/find-work.jpg" width="1280" height="720" decoding="async">
                     </figure>
                     <h3 class="all-caps" hidden>Find Contract and Full-Time Work</h3>
                   </div>
@@ -57,7 +57,7 @@ css: [/css/hub-pages.css]
                       <h2 class="all-caps">Tutorials</h2>
                     </header>
                     <figure class="full-width">
-                      <img alt="Tell your story in a compelling way to advance your career and salary." src="{{ site.url }}/img/take5/posters/gym-5016.jpg" width="1280" height="720" decoding="async">
+                      <img alt="Tell your story in a compelling way to advance your career and salary." src="/img/take5/posters/gym-5016.jpg" width="1280" height="720" decoding="async">
                     </figure>
                   <h3 class="all-caps" hidden>Learn Career Skills in 5 Minutes</h3>
                   </div>
@@ -275,38 +275,38 @@ css: [/css/hub-pages.css]
           <ul>
             <li>
             <h3>
-              <a href="https://thegymnasium.com/courses/take5/knowing-your-audience">Knowing Your Audience</a>
+              <a href="/courses/take5/knowing-your-audience">Knowing Your Audience</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://thegymnasium.com/courses/take5/self-promotion-through-your-online-presence">Self-Promotion Through Your Online Presence</a>
+              <a href="/courses/take5/self-promotion-through-your-online-presence">Self-Promotion Through Your Online Presence</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://thegymnasium.com/courses/take5/crafting-your-story">Crafting Your Story</a>
+              <a href="/courses/take5/crafting-your-story">Crafting Your Story</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://thegymnasium.com/courses/take5/how-to-tell-the-story-of-a-mid-career-pivot">How to Tell the Story of a Mid-Career Pivot</a>
+              <a href="/courses/take5/how-to-tell-the-story-of-a-mid-career-pivot">How to Tell the Story of a Mid-Career Pivot</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://thegymnasium.com/courses/take5/storytelling-for-designers">Storytelling for Designers</a>
+              <a href="/courses/take5/storytelling-for-designers">Storytelling for Designers</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://thegymnasium.com/courses/take5/managing-your-time-like-a-pro">Managing Your Time Like a Pro</a>
+              <a href="/courses/take5/managing-your-time-like-a-pro">Managing Your Time Like a Pro</a>
             </h3>
             </li>
           </ul>
         </div>
         <div class="cta">
-          <a class="gym-button" href="https://thegymnasium.com/courses/take5"><b>View More Tutorials</b></a>
+          <a class="gym-button" href="/courses/take5"><b>View More Tutorials</b></a>
         </div>
       </div>
       <div class="to-top-link">
@@ -461,5 +461,5 @@ css: [/css/hub-pages.css]
 </main>
 
 <!-- polyfills -->
-<script async nomodule src="{{ site.url }}/js/polyfills/prefixfree.min.js"></script>
-<script async nomodule src="{{ site.url }}/js/polyfills/grid-equal-height.js"></script>
+<script async nomodule src="/js/polyfills/prefixfree.min.js"></script>
+<script async nomodule src="/js/polyfills/grid-equal-height.js"></script>
