--- a/jobs/featured/index.html
+++ b/jobs/featured/index.html
@@ -3,7 +3,7 @@ layout: wrapper-full-default
 permalink: /jobs/featured/
 ---
 {%- if site.environment == 'local' -%}
-<link rel="stylesheet" href="{{ site.url }}/css/static-main-content.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="/css/static-main-content.css?{{ site.time | date:'%s' }}">
 {%- endif -%}
 
 <div class="main-content-static">
