--- a/static-pages/social-impact/index.html
+++ b/static-pages/social-impact/index.html
@@ -13,7 +13,7 @@ css: [/css/static-main-content.css]
 {%- comment -%}
   <article id="support-now">
   <h2>Support Now</h2>
-  <a href="https://my.care.org/site/Donation2?31667.donation=form1&df_id=31667&mfc_pref=T&s_src=382248000000&s_subsrc=FY22UkraineCrisisFundMGAquent&utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-ukraine-relief&utm_content=social-impact"><img alt="Ukraine Relief Fund" src="{{ site.url }}/img/static-pages/social-impact/support-now/ukraine-crisis-fund.jpg" width="800" height="450"></a>
+  <a href="https://my.care.org/site/Donation2?31667.donation=form1&df_id=31667&mfc_pref=T&s_src=382248000000&s_subsrc=FY22UkraineCrisisFundMGAquent&utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-ukraine-relief&utm_content=social-impact"><img alt="Ukraine Relief Fund" src="/img/static-pages/social-impact/support-now/ukraine-crisis-fund.jpg" width="800" height="450"></a>
   <h3>Ukraine Relief</h3>
   <p>Join us in supporting the <a href="https://my.care.org/site/Donation2?31667.donation=form1&df_id=31667&mfc_pref=T&s_src=382248000000&s_subsrc=FY22UkraineCrisisFundMGAquent&utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-ukraine-relief&utm_content=social-impact">CARE Ukraine Crisis Fund</a>. We’re donating $100,000 through matching funds and contributions. Funds raised are going toward providing food, water, and aid directly to those in need. Together we can make a difference. <a href="https://my.care.org/site/Donation2?31667.donation=form1&df_id=31667&mfc_pref=T&s_src=382248000000&s_subsrc=FY22UkraineCrisisFundMGAquent&utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-ukraine-relief&utm_content=social-impact">Donate Now</a></p>
   </article>
