--- a/webinars/index.html
+++ b/webinars/index.html
@@ -16,7 +16,7 @@ layout: raw
 
 {%- assign webinars_descending_date = webinars_ascending_date | reverse -%}
 
-<link rel="stylesheet" href="{{ site.url }}/css/webinars.css">
+<link rel="stylesheet" href="/css/webinars.css">
 
 <main id="main" role="main">
 
@@ -61,7 +61,7 @@ layout: raw
             <div class="webinar--info">
             {%- comment -%}
             <pre>({{ complete_webinar_title }})</pre>
-            <img src="{{ site.url }}/img/social/webinars/{{ webinar.event_ogimage }}">
+            <img src="/img/social/webinars/{{ webinar.event_ogimage }}">
             {%- endcomment -%}
             {%- capture headcount -%}{{ item.speaker | size }}{%- endcapture -%}
               {%- if item.register -%}
@@ -75,7 +75,7 @@ layout: raw
               {%- if item.register and site.data.bios[speaker].headshot != null -%}
                 <li>
                   <figure>
-                    <img src="{{ site.url }}/img/webinar-bio-headshots/{{ site.data.bios[speaker].headshot }}" alt="{{ site.data.bios[speaker].name }}" loading="lazy">
+                    <img src="/img/webinar-bio-headshots/{{ site.data.bios[speaker].headshot }}" alt="{{ site.data.bios[speaker].name }}" loading="lazy">
                     <figcaption>{{ site.data.bios[speaker].name }}</figcaption>
                   </figure>
                 </li>
