Update accessibility collection page
- Update broken link

--- a/hub-pages/accessibility/index.html
+++ b/hub-pages/accessibility/index.html
@@ -305,7 +305,7 @@ css: [/css/hub-pages.css]
             <div class="section-content">
               <header>
                 <h2 class="all-caps">Accessibility Services</h2>
-                <p>Explore people, projects, and training that deliver truly inclusive experiences from <a href="https://aquent.com/brands/digital-accessibility" target="_blank" rel="noopener">Aquent</a>.</p>
+                <p>Explore people, projects, and training that deliver truly inclusive experiences from <a href="https://aquent.com" target="_blank" rel="noopener">Aquent</a>.</p>
               </header>
               <div class="list-hr">
                 <ul>
