replace `event_title` with `title`

--- a/feeds/_partials/webinars.html
+++ b/feeds/_partials/webinars.html
@@ -4,7 +4,7 @@
   {%- assign data = data | replace: 'description', 'description' -%}
   {%- assign data = data | replace: 'event_date', 'date' -%}
   {%- assign data = data | replace: 'event_guests', 'subtitle' -%}
-  {%- assign data = data | replace: 'event_title', 'title' -%}
+  {%- assign data = data | replace: 'title', 'title' -%}
   {%- assign data = data | replace: 'event_ID', 'id' -%}
   {%- assign data = data | replace: 'content_category', 'category' -%}
   {%- assign data = data | replace: 'video_ID', 'video_id' -%}
