--- a/tests/webinars/webinars-test.html
+++ b/tests/webinars/webinars-test.html
@@ -56,7 +56,7 @@ Webinar Count: {{ site.data.webinars | size }}
     {%- assign gym_path = item.permalink | remove: "/"-%}
     
     <tr>
-        <td><strong>{{ item.event_title | strip_html }}</strong></td>
+        <td><strong>{{ item.title | strip_html }}</strong></td>
         <td><a href="{{ site.url }}/{{ item.permalink }}" target="_blank">{{ site.url }}/{{ item.permalink }}</a></td>
         <td><a href="{{ gym_staging_url }}/{{ gym_path }}" target="_blank">{{ gym_staging_url }}/{{ gym_path }}</a></td>
         <td><a href="{{ gym_production_url }}/{{ gym_path }}" target="_blank">{{ gym_production_url }}/{{ gym_path }}</a></td>
